--- a/resources/[Scripts]/garages/web-side/css.css
+++ b/resources/[Scripts]/garages/web-side/css.css
@@ -20,7 +20,6 @@ html,body {
 	min-height: 100%;
 	max-height: 100%;
 	position: absolute;
-	background: #2d2740;
 }
 
 #buttons {
@@ -39,10 +38,10 @@ html,body {
 	width: 120px;
 	padding: 15px;
 	color: #95c5ab;
-	border-radius: 4px;
 	margin-bottom: 5px;
 	background: #2e6e4c;
 	letter-spacing: .3px;
+	border-radius: 3px;
 }
 
 #spawnVehicle:hover {
@@ -55,10 +54,10 @@ html,body {
 	padding: 15px;
 	color: #d898ae;
 	margin-left: 10px;
-	border-radius: 4px;
 	margin-bottom: 5px;
 	background: #7c344d;
 	letter-spacing: .3px;
+	border-radius: 3px;
 }
 
 #storeVehicle:hover {
@@ -74,35 +73,36 @@ html,body {
 }
 
 #vehicleName {
+	color: #ccc;
 	float: left;
 	width: 280px;
 	padding: 15px;
-	color: #cacaca;
 	font-size: 11px;
-	background: #4c4465;
 	letter-spacing: 1px;
 	text-transform: uppercase;
-	border-top-left-radius: 4px;
-	border-top-right-radius: 4px;
+	border-top-left-radius: 3px;
+	border-top-right-radius: 3px;
+	background: rgba(15,15,15,.85);
 }
 
 .vehicle {
 	float: left;
+	color: #999;
 	width: 270px;
-	color: #413a57;
 	margin-bottom: 15px;
-	background: #b1aac9;
 	padding: 10px 20px 20px;
-	border-bottom-left-radius: 4px;
-	border-bottom-right-radius: 4px;
+	border-bottom-right-radius: 3px;
+	border-bottom-left-radius: 3px;
+	background: rgba(15,15,15,.75);
+}
+
+.vehicle img {
+	width: 100%;
+	height: auto;
 }
 
 .vehicle:last-child {
 	margin-bottom: 0;
-}
-
-.vehicle.active {
-	background: #c1bad6;
 }
 
 #vehicleLegend {
@@ -117,15 +117,21 @@ html,body {
 	height: 8px;
 	width: 200px;
 	margin-top: 14px;
+	background: #555;
 	margin-bottom: 2px;
-	border-radius: 4px;
-	background: #857da0;
 }
 
 #vehicleProgress {
 	float: left;
 	height: 8px;
 	width: 100px;
-	border-radius: 4px;
-	background: #413a57;
+	background: #ccc;
+}
+
+.vehicle.active {
+	background: rgba(15,15,15,.85);
+}
+
+.vehicle.active > #vehicleBack {
+	background: #897c22;
 }
