--- a/resources/[Essentials]/vrp/web-side/gui/design.css
+++ b/resources/[Essentials]/vrp/web-side/gui/design.css
@@ -63,21 +63,24 @@ html,body {
 }
 
 #NotifyBackground {
-	color: #b1aac9;
+	color: #ccc;
 	font-size: 13px;
  	line-height: 20px;
-	border-radius: 2px;
+	 border-radius: 5px;
 	padding: 15px 20px;
 	margin-right: 10px;
-	background: #2d2740;
+	background: rgba(17, 17, 17, 0.7);
 	text-shadow: 1px 1px #1f1b2d;
-	border-left: 5px solid #1f1b2d;
-	border-right: 5px solid #1f1b2d;
+	border: 2px solid rgba(255, 255, 255, 0.11);
 	font-family: "Roboto",Arial,Helvetica,sans-serif;
 }
 
 #NotifyBackground green {
-	color: #2e6e4c;
+	color: #00ff00;
+}
+
+#NotifyBackground red {
+	color: #ff0000;
 }
 
 #NotifyBackground b {
