Updated Smartphone current version to v1.1, to avoid unecessary message

--- a/resources/[Essentials]/vrp/web-side/loading/css.css
+++ b/resources/[Essentials]/vrp/web-side/loading/css.css
@@ -2,8 +2,9 @@
 	box-sizing: border-box;
 }
 
-body {
+body {	
 	margin: 0;
 	font-family: Arial;
 	font-size: 17px;
+	background-image: url('background.png');
 }
